deploy: c3ad410e8417bd0cf13c0efdb8d71fbd46aa0208

--- a/components/LocalizeMediaInputComponent.html
+++ b/components/LocalizeMediaInputComponent.html
@@ -124,6 +124,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Component for localizing media input. Allow to use images for different locales.</p>
+
+    </p>
 
 
     <p class="comment">
@@ -336,7 +343,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:67</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:78</a></div>
                             </td>
                         </tr>
 
@@ -361,9 +368,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:59</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:65</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indicates the required media type.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -376,9 +389,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:63</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Placeholder text for the input.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -412,14 +431,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="118"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:118</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="132"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:132</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes empty values for the localized media data.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -449,8 +470,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:99</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="112"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:112</a></div>
                         </td>
                     </tr>
 
@@ -516,8 +537,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="103"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:103</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="116"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:116</a></div>
                         </td>
                     </tr>
 
@@ -583,8 +604,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="107"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:107</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="120"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:120</a></div>
                         </td>
                     </tr>
 
@@ -650,14 +671,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="91"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:91</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="104"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:104</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Synchronizes the localized media data with the form control.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -687,14 +710,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="78"
-                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:78</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="90"
+                                    class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:90</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Writes the localized media data to the control.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -764,10 +789,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:71</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Active tab index.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -791,7 +822,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:65</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:76</a></div>
                         </td>
                     </tr>
 
@@ -818,7 +849,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:67</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:78</a></div>
                         </td>
                     </tr>
 
@@ -843,10 +874,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:69</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Indicates whether the input is disabled.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -869,10 +906,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:63</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:73</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Unique identifier for the input tag.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -901,10 +944,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:75</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>List of available languages.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -921,10 +970,16 @@
             </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:65</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Indicates the required media type.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -946,7 +1001,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="112" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:112</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="125" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:125</a></div>
                         </td>
                     </tr>
 
@@ -971,7 +1026,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="115" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:115</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="128" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:128</a></div>
                         </td>
                     </tr>
 
@@ -991,10 +1046,16 @@
             </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:58</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:63</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Placeholder text for the input.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -1017,10 +1078,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:67</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Holds the localized media data.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -1044,7 +1111,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">lib/src/modules/locale/src/media-input/localize-media-input.component.ts:77</a></div>
                         </td>
                     </tr>
 
@@ -1073,6 +1140,10 @@ import {TabViewModule} from &quot;primeng/tabview&quot;;
 import {MediaComponent, MediaInputComponent, MediaTypeVariant} from &quot;../../../media&quot;;
 import {NumberUtils} from &quot;../../../../global/util&quot;;
 
+
+/**
+ * Component for localizing media input. Allow to use images for different locales.
+ */
 @Component({
   selector: &quot;localize-media-input&quot;,
   standalone: true,
@@ -1098,12 +1169,19 @@ import {NumberUtils} from &quot;../../../../global/util&quot;;
   ]
 })
 export class LocalizeMediaInputComponent implements ControlValueAccessor {
+  /** Placeholder text for the input. */
   placeholder &#x3D; input&lt;string&gt;();
+  /** Indicates the required media type. */
   mediaType &#x3D; input.required&lt;MediaTypeVariant&gt;();
+  /** Holds the localized media data. */
   resData: { [k: string]: LocalizedMedia };
+  /** Indicates whether the input is disabled. */
   disabled &#x3D; false;
+  /** Active tab index. */
   activeTab &#x3D; 0;
+  /** Unique identifier for the input tag. */
   readonly id &#x3D; &#x60;lsi-${NumberUtils.getRandomInt()}&#x60;;
+  /** List of available languages. */
   readonly langList: Language[] &#x3D; [];
   private readonly availableLangs &#x3D; inject(AVAIL_LANGS);
   private readonly ts &#x3D; inject(TranslocoService);
@@ -1118,6 +1196,7 @@ export class LocalizeMediaInputComponent implements ControlValueAccessor {
     }
   }
 
+  /** Writes the localized media data to the control. */
   writeValue(res: LocalizedMedia[]) {
     if (!res) {
       this.initEmptyValues();
@@ -1131,6 +1210,7 @@ export class LocalizeMediaInputComponent implements ControlValueAccessor {
     this.cdr.markForCheck();
   }
 
+  /** Synchronizes the localized media data with the form control. */
   synchronize() {
     const res: LocalizedMedia[] &#x3D; [];
     for (const k in this.resData) {
@@ -1158,6 +1238,7 @@ export class LocalizeMediaInputComponent implements ControlValueAccessor {
   onTouched &#x3D; () &#x3D;&gt; {
   };
 
+  /** Initializes empty values for the localized media data. */
   private initEmptyValues() {
     this.resData &#x3D; {};
     for (const lang of this.availableLangs) {
