--- a/components/LocalizeStringInputComponent.html
+++ b/components/LocalizeStringInputComponent.html
@@ -124,6 +124,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Component for localizing string input. Allow to use images for different locales.</p>
+
+    </p>
 
 
     <p class="comment">
@@ -326,7 +333,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:57</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:66</a></div>
                             </td>
                         </tr>
 
@@ -346,9 +353,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:49</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:53</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Placeholder text for the input.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -382,14 +395,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="108"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:108</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="120"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:120</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes empty values for the localized string data.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -419,8 +434,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="89"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:89</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="100"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:100</a></div>
                         </td>
                     </tr>
 
@@ -486,8 +501,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="93"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:93</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="104"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:104</a></div>
                         </td>
                     </tr>
 
@@ -553,8 +568,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="97"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:97</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="108"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:108</a></div>
                         </td>
                     </tr>
 
@@ -620,14 +635,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="81"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:81</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="92"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:92</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Synchronizes the localized string data with the form control.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -657,14 +674,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="68"
-                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:68</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="78"
+                                    class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:78</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Writes the localized string data to the control.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -734,10 +753,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:52</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:59</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Active tab index.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -761,7 +786,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:55</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -788,7 +813,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:57</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -813,10 +838,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:51</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:57</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Indicates whether the input is disabled.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -839,10 +870,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:53</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:61</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Unique identifier for the input tag.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -871,10 +908,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:63</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>List of available languages.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -896,7 +939,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="102" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:102</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="113" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:113</a></div>
                         </td>
                     </tr>
 
@@ -921,7 +964,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="105" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:105</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="116" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:116</a></div>
                         </td>
                     </tr>
 
@@ -941,10 +984,16 @@
             </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:49</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:53</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Placeholder text for the input.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -967,10 +1016,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:50</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:55</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Holds the localized string data.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -994,7 +1049,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/modules/locale/src/string-input/localize-string-input.component.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -1017,6 +1072,9 @@ import {InputTextareaModule} from &quot;primeng/inputtextarea&quot;;
 import {NumberUtils} from &quot;../../../../global/util&quot;;
 import {MediaComponent} from &quot;../../../media&quot;;
 
+/**
+ * Component for localizing string input. Allow to use images for different locales.
+ */
 @Component({
   selector: &quot;localize-string-input&quot;,
   standalone: true,
@@ -1039,11 +1097,17 @@ import {MediaComponent} from &quot;../../../media&quot;;
 })
 export class LocalizeStringInputComponent implements ControlValueAccessor {
 
+  /** Placeholder text for the input. */
   placeholder &#x3D; input&lt;string&gt;();
+  /** Holds the localized string data. */
   resData: { [k: string]: LocalizedString };
+  /** Indicates whether the input is disabled. */
   disabled &#x3D; false;
+  /** Active tab index. */
   activeTab &#x3D; 0;
+  /** Unique identifier for the input tag. */
   readonly id &#x3D; &#x60;lsi-${NumberUtils.getRandomInt()}&#x60;;
+  /** List of available languages. */
   readonly langList: Language[] &#x3D; [];
   private readonly availableLangs &#x3D; inject(AVAIL_LANGS);
   private readonly ts &#x3D; inject(TranslocoService);
@@ -1058,6 +1122,7 @@ export class LocalizeStringInputComponent implements ControlValueAccessor {
     }
   }
 
+  /** Writes the localized string data to the control. */
   writeValue(res: LocalizedString[]) {
     if (!res) {
       this.initEmptyValues();
@@ -1071,6 +1136,7 @@ export class LocalizeStringInputComponent implements ControlValueAccessor {
     this.cdr.markForCheck();
   }
 
+  /** Synchronizes the localized string data with the form control. */
   synchronize() {
     const res: LocalizedString[] &#x3D; [];
     for (const k in this.resData) {
@@ -1098,6 +1164,7 @@ export class LocalizeStringInputComponent implements ControlValueAccessor {
   onTouched &#x3D; () &#x3D;&gt; {
   };
 
+  /** Initializes empty values for the localized string data. */
   private initEmptyValues() {
     this.resData &#x3D; {};
     for (const lang of this.availableLangs) {
