deploy: 49b61aed84cee652e3613c9191597b58c7d746a2

--- a/components/PreloaderComponent.html
+++ b/components/PreloaderComponent.html
@@ -124,6 +124,14 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>PreloaderComponent is a simple Angular component that displays a loading spinner.
+This component can be used to indicate that a process is ongoing, enhancing user experience.</p>
+
+    </p>
 
 
 
@@ -203,6 +211,10 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component} from &quot;@angular/core&quot;;
 import {ProgressSpinnerModule} from &quot;primeng/progressspinner&quot;;
 
+/**
+ * PreloaderComponent is a simple Angular component that displays a loading spinner.
+ * This component can be used to indicate that a process is ongoing, enhancing user experience.
+ */
 @Component({
   selector: &quot;preloader&quot;,
   templateUrl: &quot;./preloader.component.html&quot;,
