Refactoring * change names of object components to entities

--- a/lib/src/components/xdb/src/xdb-export/xdb-export-dialog.component.html
+++ b/lib/src/components/xdb/src/xdb-export/xdb-export-dialog.component.html
@@ -29,7 +29,7 @@
     [options]="properties"
     [multiple]="true"
     [checkbox]="true"
-    [metaKeySelection]="true"
+    [metaKeySelection]="false"
     [filter]="true"
     [showToggleAll]="true"
     [listStyle]="{ 'max-height': '220px' }"
