Improvements and refactoring: * Print media-type in media-input component * Fix duplicate object behavior * Fix translations

--- a/lib/src/components/entity/src/details/entity-details.component.html
+++ b/lib/src/components/entity/src/details/entity-details.component.html
@@ -195,7 +195,7 @@
       </div>
       <div class="p-float-label">
         <textarea pInputTextarea id="tabParams" [formControl]="vm.tabForm.controls.size"></textarea>
-        <label for="tabParams">{{ 'object.details.tab.params' | transloco }}</label>
+        <label for="tabParams">{{ 'object.details.tab.size' | transloco }}</label>
       </div>
     </div>
   </ng-template>
