--- a/lib/src/components/explorer/src/object/explorer-object.component.html
+++ b/lib/src/components/explorer/src/object/explorer-object.component.html
@@ -69,7 +69,7 @@
       }
     </div>
     <div>
-      @if (canDuplicate) {
+      @if (vm.canDuplicate) {
         <button class="p-button-sm" pButton pRipple
                 (click)="duplicateObject()">
           <i class="pi pi-copy"></i>
