--- a/components/ExplorerObjectComponent.html
+++ b/components/ExplorerObjectComponent.html
@@ -305,9 +305,6 @@ It utilizes a ViewModel to manage state and communicate with services.</p>
                                 <li>
                                     <a href="#canExport" >canExport</a>
                                 </li>
-                                <li>
-                                    <a href="#canDuplicate" >canDuplicate</a>
-                                </li>
                             </ul>
                         </td>
                     </tr>
@@ -345,8 +342,8 @@ It utilizes a ViewModel to manage state and communicate with services.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="174"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:174</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="164"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:164</a></div>
                         </td>
                     </tr>
 
@@ -386,8 +383,8 @@ current object&#39;s properties and opens it in a new browser tab.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="164"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:164</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="154"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:154</a></div>
                         </td>
                     </tr>
 
@@ -427,8 +424,8 @@ and opens it with the necessary configuration from the ViewModel.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="155"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:155</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="145"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:145</a></div>
                         </td>
                     </tr>
 
@@ -506,8 +503,8 @@ that belong to the provided tab.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="144"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:144</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="134"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:134</a></div>
                         </td>
                     </tr>
 
@@ -547,8 +544,8 @@ previous view without having to implement custom navigation logic.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="135"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:135</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="125"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:125</a></div>
                         </td>
                     </tr>
 
@@ -772,43 +769,6 @@ the object and have an ADMIN role.</p>
 
             </tbody>
         </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="canDuplicate"></a>
-                        <span class="name"><b>canDuplicate</b><a href="#canDuplicate"><span class="icon ion-ios-link"></span></a></span>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="col-md-4">
-                        <span class="accessor"><b>get</b><code>canDuplicate()</code></span>
-                    </td>
-                </tr>
-                            <tr>
-                                <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="126" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:126</a></div>
-                                </td>
-                            </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-description"><p>Checks if the object can be duplicated.
-The object can be duplicated if there is no existing duplicate ID
-and if the default action for duplication is enabled.</p>
-</div>
-
-                                <div>
-                                </div>
-                                <div class="io-description">
-                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
-
-                                </div>
-                        </td>
-                    </tr>
-
-            </tbody>
-        </table>
 </section>
 </div>
 
@@ -915,16 +875,6 @@ export class ExplorerObjectComponent implements OnInit {
       return false;
     }
     return this.currentUser.hasSomeRole(Roles.ADMIN);
-  }
-
-  /**
-   * Checks if the object can be duplicated.
-   * The object can be duplicated if there is no existing duplicate ID
-   * and if the default action for duplication is enabled.
-   * @returns {boolean} True if the object can be duplicated, otherwise false.
-   */
-  get canDuplicate(): boolean {
-    return !this.vm.duplicateId &amp;&amp; this.vm.targetData.entity.defaultActionDuplicate;
   }
 
   /**
@@ -1054,7 +1004,7 @@ export class ExplorerObjectComponent implements OnInit {
       }
     &lt;/div&gt;
     &lt;div&gt;
-      @if (canDuplicate) {
+      @if (vm.canDuplicate) {
         &lt;button class&#x3D;&quot;p-button-sm&quot; pButton pRipple
                 (click)&#x3D;&quot;duplicateObject()&quot;&gt;
           &lt;i class&#x3D;&quot;pi pi-copy&quot;&gt;&lt;/i&gt;
@@ -1250,7 +1200,7 @@ export class ExplorerObjectComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><p-tabView [scrollable]="true" [ngClass]="{single: vm.tabs.length < 2}" [(activeIndex)]="activeTabIndex">  @for (tab of vm.tabs; track tab.id) {    @if (hasColumns(tab)) {      <p-tabPanel        [header]="tab.id === vm.restTab.id ? (\'explorer.tab.rest\' | transloco) : (tab.name | localize: tab.id).toString()">        @if (vm.targetData?.entity?.columns) {          <div [ngClass]="tabClassName">            @for (col of vm.targetData.entity.columns; track col.id) {              @if (col.tab?.id === tab.id && col.objectVisibility) {                <div class="box">                  @if (col.objectVisibility) {                    <explorer-object-renderer                      tooltipPosition="left"                      [pTooltip]="col.property"                      [showDelay]="1000"                      [target]="vm.targetData"                      [column]="col"                      [data]="vm.entityData"                      [entityForm]="vm.entityForm"/>                  }                </div>              }            }          </div>        }      </p-tabPanel>    }  }</p-tabView><ng-template #actionsUi>  <explorer-action-renderer    [entityForm]="vm.entityForm"    [target]="vm.targetData"    [data]="vm.entityData"    [actions]="vm.targetData.entity.actions"/></ng-template>@if (vm.targetData?.entity) {  <div class="actions" [ngClass]="{\'dialog-mode\': vm.dialogMode}">    <div>      @if (!vm.dialogMode) {        <p-button          class="actions-btn"          icon="pi pi-arrow-left"          size="small"          [rounded]="true"          [text]="true"          (click)="navBack()"/>      }      @if (vm.targetData.entity.actions?.length) {        <p-button          class="actions-btn"          severity="warning"          icon="pi pi-ellipsis-v"          size="small"          [rounded]="true"          [text]="true"          (click)="vm.actionsDialogVisibility.set(true)"/>        @if (device.isDesktop) {          <ng-container *ngTemplateOutlet="actionsUi"/>        } @else {          <p-dialog            position="bottom"            [header]="\'explorer.actions\' | transloco"            [visible]="vm.actionsDialogVisibility()"            (visibleChange)="vm.actionsDialogVisibility.set($event)">            <ng-container *ngTemplateOutlet="actionsUi"/>          </p-dialog>        }      }    </div>    <div>      @if (canDuplicate) {        <button class="p-button-sm" pButton pRipple                (click)="duplicateObject()">          <i class="pi pi-copy"></i>          <span>{{ "explorer.duplicate" | transloco }}</span>        </button>      }      @if (canExport) {        <button class="p-button-sm p-button-secondary" pButton pRipple                (click)="exportObject()">          <i class="pi pi-file-export"></i>          <span>{{ "explorer.export.btn" | transloco }}</span>        </button>      }      @if (vm.targetData.entity.defaultActionDelete) {        <button class="p-button-sm p-button-danger" pButton pRipple                [disabled]="!vm.canDeleteObject" (click)="vm.deleteObject()">          <i class="pi pi-times"></i>          <span>{{ "explorer.delete" | transloco }}</span>        </button>      }      @if (vm.targetData.entity.defaultActionSave) {        <button class="p-button-sm p-button-success" pButton pRipple                [disabled]="!vm.entityForm.valid" (click)="vm.saveObject()">          <i class="pi pi-save"></i>          <span>{{ "explorer.save" | transloco }}</span>        </button>      }    </div>  </div>}<preloader *preloading="{state: true, channel: vm.preloaderChannel}"/><p-confirmDialog #delDialog>  <ng-template pTemplate="header">    {{ "explorer.msg.delete" | transloco }}  </ng-template>  <ng-template pTemplate="footer">    <button type="button" pButton (click)="delDialog.reject()">      {{ "msg.cancel" | transloco }}    </button>    <button type="button" class="p-button-success" pButton            (click)="delDialog.accept()">      {{ "msg.accept" | transloco }}    </button>  </ng-template></p-confirmDialog></div>'
+        var COMPONENT_TEMPLATE = '<div><p-tabView [scrollable]="true" [ngClass]="{single: vm.tabs.length < 2}" [(activeIndex)]="activeTabIndex">  @for (tab of vm.tabs; track tab.id) {    @if (hasColumns(tab)) {      <p-tabPanel        [header]="tab.id === vm.restTab.id ? (\'explorer.tab.rest\' | transloco) : (tab.name | localize: tab.id).toString()">        @if (vm.targetData?.entity?.columns) {          <div [ngClass]="tabClassName">            @for (col of vm.targetData.entity.columns; track col.id) {              @if (col.tab?.id === tab.id && col.objectVisibility) {                <div class="box">                  @if (col.objectVisibility) {                    <explorer-object-renderer                      tooltipPosition="left"                      [pTooltip]="col.property"                      [showDelay]="1000"                      [target]="vm.targetData"                      [column]="col"                      [data]="vm.entityData"                      [entityForm]="vm.entityForm"/>                  }                </div>              }            }          </div>        }      </p-tabPanel>    }  }</p-tabView><ng-template #actionsUi>  <explorer-action-renderer    [entityForm]="vm.entityForm"    [target]="vm.targetData"    [data]="vm.entityData"    [actions]="vm.targetData.entity.actions"/></ng-template>@if (vm.targetData?.entity) {  <div class="actions" [ngClass]="{\'dialog-mode\': vm.dialogMode}">    <div>      @if (!vm.dialogMode) {        <p-button          class="actions-btn"          icon="pi pi-arrow-left"          size="small"          [rounded]="true"          [text]="true"          (click)="navBack()"/>      }      @if (vm.targetData.entity.actions?.length) {        <p-button          class="actions-btn"          severity="warning"          icon="pi pi-ellipsis-v"          size="small"          [rounded]="true"          [text]="true"          (click)="vm.actionsDialogVisibility.set(true)"/>        @if (device.isDesktop) {          <ng-container *ngTemplateOutlet="actionsUi"/>        } @else {          <p-dialog            position="bottom"            [header]="\'explorer.actions\' | transloco"            [visible]="vm.actionsDialogVisibility()"            (visibleChange)="vm.actionsDialogVisibility.set($event)">            <ng-container *ngTemplateOutlet="actionsUi"/>          </p-dialog>        }      }    </div>    <div>      @if (vm.canDuplicate) {        <button class="p-button-sm" pButton pRipple                (click)="duplicateObject()">          <i class="pi pi-copy"></i>          <span>{{ "explorer.duplicate" | transloco }}</span>        </button>      }      @if (canExport) {        <button class="p-button-sm p-button-secondary" pButton pRipple                (click)="exportObject()">          <i class="pi pi-file-export"></i>          <span>{{ "explorer.export.btn" | transloco }}</span>        </button>      }      @if (vm.targetData.entity.defaultActionDelete) {        <button class="p-button-sm p-button-danger" pButton pRipple                [disabled]="!vm.canDeleteObject" (click)="vm.deleteObject()">          <i class="pi pi-times"></i>          <span>{{ "explorer.delete" | transloco }}</span>        </button>      }      @if (vm.targetData.entity.defaultActionSave) {        <button class="p-button-sm p-button-success" pButton pRipple                [disabled]="!vm.entityForm.valid" (click)="vm.saveObject()">          <i class="pi pi-save"></i>          <span>{{ "explorer.save" | transloco }}</span>        </button>      }    </div>  </div>}<preloader *preloading="{state: true, channel: vm.preloaderChannel}"/><p-confirmDialog #delDialog>  <ng-template pTemplate="header">    {{ "explorer.msg.delete" | transloco }}  </ng-template>  <ng-template pTemplate="footer">    <button type="button" pButton (click)="delDialog.reject()">      {{ "msg.cancel" | transloco }}    </button>    <button type="button" class="p-button-success" pButton            (click)="delDialog.accept()">      {{ "msg.accept" | transloco }}    </button>  </ng-template></p-confirmDialog></div>'
     var COMPONENTS = [{'name': 'AuthComponent', 'selector': 'auth'},{'name': 'BooleanObjectRendererComponent', 'selector': 'boolean-object-renderer'},{'name': 'BooleanSectionRendererComponent', 'selector': 'boolean-section-renderer'},{'name': 'ConfigComponent', 'selector': 'config'},{'name': 'ConfigPropertyEditorComponent', 'selector': 'config-property-editor'},{'name': 'CreateFileActionDialogComponent', 'selector': 'create-file-action-dialog'},{'name': 'CreateFileActionRendererComponent', 'selector': 'create-file-action-renderer'},{'name': 'CreateMediaActionDialogComponent', 'selector': 'create-media-action-dialog'},{'name': 'CreateMediaActionRendererComponent', 'selector': 'create-media-action-renderer'},{'name': 'DateObjectRendererComponent', 'selector': 'date-object-renderer'},{'name': 'DateSectionRendererComponent', 'selector': 'date-section-renderer'},{'name': 'DeleteFileActionRendererComponent', 'selector': 'delete-file-action-renderer'},{'name': 'DeleteMediaActionRendererComponent', 'selector': 'delete-media-action-renderer'},{'name': 'EntityComponent', 'selector': 'entity'},{'name': 'EntityDetailsColumnEditorComponent', 'selector': 'entity-details-column-editor'},{'name': 'EntityDetailsComponent', 'selector': 'entity-details'},{'name': 'ExplorerActionRendererComponent', 'selector': 'explorer-action-renderer'},{'name': 'ExplorerObjectComponent', 'selector': 'explorer-object'},{'name': 'ExplorerObjectRendererComponent', 'selector': 'explorer-object-renderer'},{'name': 'ExplorerSectionComponent', 'selector': 'section'},{'name': 'ExplorerSectionRendererComponent', 'selector': 'explorer-section-renderer'},{'name': 'FileInputComponent', 'selector': 'file-input'},{'name': 'FileMetadataObjectRendererComponent', 'selector': 'file-metadata-object-renderer'},{'name': 'FileStatMediaObjectRendererComponent', 'selector': 'file-stat-media-object-renderer'},{'name': 'ImagesStatsMediaObjectRendererComponent', 'selector': 'images-stats-media-object-renderer'},{'name': 'LocalizedMediaObjectRendererComponent', 'selector': 'localized-media-object-renderer'},{'name': 'LocalizedStringObjectRendererComponent', 'selector': 'localized-string-object-renderer'},{'name': 'LocalizeMediaInputComponent', 'selector': 'localize-media-input'},{'name': 'LocalizeStringInputComponent', 'selector': 'localize-string-input'},{'name': 'MediaComponent', 'selector': 'media-res'},{'name': 'MediaInputComponent', 'selector': 'media-input'},{'name': 'MediaObjectRendererComponent', 'selector': 'media-object-renderer'},{'name': 'MediaSectionRendererComponent', 'selector': 'media-section-renderer'},{'name': 'NewPasswordObjectRendererComponent', 'selector': 'new-password-object-renderer'},{'name': 'PreloaderComponent', 'selector': 'preloader'},{'name': 'ProcessStatsObjectRendererComponent', 'selector': 'process-stats-media-object-renderer'},{'name': 'ProfileComponent', 'selector': 'profile'},{'name': 'ReCreateMediaActionRendererComponent', 'selector': 're-create-media-action-renderer'},{'name': 'ReferenceObjectRendererComponent', 'selector': 'reference-object-renderer'},{'name': 'ReferenceSectionRendererComponent', 'selector': 'reference-section-renderer'},{'name': 'RefInputComponent', 'selector': 'ref-input'},{'name': 'SectionFilterDialogComponent', 'selector': 'section-filter-dialog'},{'name': 'StartProcessActionRendererComponent', 'selector': 'start-process-action-renderer'},{'name': 'StopProcessActionRendererComponent', 'selector': 'stop-process-action-renderer'},{'name': 'StringObjectRendererComponent', 'selector': 'string-object-renderer'},{'name': 'StringSectionRendererComponent', 'selector': 'string-section-renderer'},{'name': 'TargetColumnsDialogComponent', 'selector': 'target-columns-dialog'},{'name': 'ToggleProcessActionRendererComponent', 'selector': 'toggle-process-action-renderer'},{'name': 'UpdateMediaFileActionDialogComponent', 'selector': 'update-media-file-action-dialog'},{'name': 'UpdateMediaFileActionRendererComponent', 'selector': 'update-media-file-action-renderer'},{'name': 'VirtualMediaSectionRendererComponent', 'selector': 'virtual-media-section-renderer'},{'name': 'XdbExportDialogComponent', 'selector': 'xdb-export-dialog'},{'name': 'XdbImportComponent', 'selector': 'xdb-import'}];
     var DIRECTIVES = [{'name': 'PreloaderDirective', 'selector': '[preloading]'},{'name': 'PreventDefaultDirective', 'selector': '[prevent-default]'},{'name': 'StopPropagationDirective', 'selector': '[stop-propagation]'}];
     var ACTUAL_COMPONENT = {'name': 'ExplorerObjectComponent'};
